--- a/style.css
+++ b/style.css
@@ -47,9 +47,29 @@ nav {
   border-right: 1px solid black;
 }
 
-.shop-sections button:hover {
-  background-color: rgba(0, 0, 0, .07);
+.shop-section button:hover {
+  background-color: rgba(0, 0, 0, .03);
   cursor: pointer;
+}
+
+.dropdown {
+  display: none;
+  border: 1px solid black;
+  background-color: white;
+  border-top: none;
+  padding: 5px;
+  width: 100%;
+}
+
+.dropdown ul {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  gap: 20px;
+}
+
+.shop-section:hover .dropdown {
+  display: flex;
 }
 
 .search-bar-container {
