added hover to icons

--- a/style.css
+++ b/style.css
@@ -131,6 +131,64 @@ nav {
   border: none;
 }
 
+.sign-in-dropdown {
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  border: 1px solid black;
+  margin-top: 25px;
+  right: 10px;
+  padding: 15px;
+  gap: 15px;
+}
+
+.sign-in-dropdown p {
+  margin: 0;
+  font-size: 1.7rem;
+}
+
+.sign-in-dropdown input {
+  outline: none;
+}
+
+.favourites-dropdown {
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  border: 1px solid black;
+  margin-top: 25px;
+  right: 10px;
+  padding: 10px;
+  gap: 10px;
+  width: 300px;
+  height: 400px;
+}
+
+.favourites-items {
+  display: flex;
+  overflow: scroll;
+  flex-direction: column;
+}
+
+.favourites-dropdown-heading p {
+  margin: 0;
+  font-size: 1.7rem;
+}
+
+.favourites-dropdown img {
+  border: 1px solid black;
+  border-radius: 4px;
+  width: 65px;
+  height: 75px;
+}
+
+.favourites-item {
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+  align-items: center;
+}
+
 .basket-dropdown {
   display: none;
   flex-direction: column;
@@ -216,62 +274,16 @@ nav {
   flex: .1;
 }
 
-.sign-in-dropdown {
-  display: none;
-  flex-direction: column;
-  position: absolute;
-  border: 1px solid black;
-  margin-top: 25px;
-  right: 10px;
-  padding: 15px;
-  gap: 15px;
-}
-
-.sign-in-dropdown p {
-  margin: 0;
-  font-size: 1.1rem;
-}
-
-.sign-in-dropdown input {
-  outline: none;
-}
-
-.favourites-dropdown {
+.profile-icon:hover + .sign-in-dropdown {
   display: flex;
-  flex-direction: column;
-  position: absolute;
-  border: 1px solid black;
-  margin-top: 25px;
-  right: 10px;
-  padding: 10px;
-  gap: 10px;
-  width: 300px;
-  height: 400px;
 }
 
-.favourites-items {
+.favourites-icon:hover + .favourites-dropdown {
   display: flex;
-  overflow: scroll;
-  flex-direction: column;
 }
 
-.favourites-dropdown-heading p {
-  margin: 0;
-  font-size: 1.1rem;
-}
-
-.favourites-dropdown img {
-  border: 1px solid black;
-  border-radius: 4px;
-  width: 65px;
-  height: 75px;
-}
-
-.favourites-item {
+.basket-icon:hover + .basket-dropdown {
   display: flex;
-  gap: 15px;
-  justify-content: center;
-  align-items: center;
 }
 
 .material-symbols-outlined {
